crates/ika-package-resolver/src/snapshots/ika_package_resolver__tests__multiple_linkage_contexts_layout.snap
---
source: crates/ika-package-resolver/src/lib.rs
expression: "fmt(struct_layout, enum_layout)"
---
struct:
struct 0xa0::m::T1<0xa0::m::T0, 0xa1::m::T3> {
    a: address,
    p: struct 0xa0::m::T0 {
        b: bool,
        v: vector<struct 0xa0::m::T1<0xa0::m::T2, u128> {
            a: address,
            p: struct 0xa0::m::T2 {
                x: u8,
            },
            q: vector<u128>,
        }>,
    },
    q: vector<struct 0xa1::m::T3 {
        y: u16,
    }>,
}

enum:
enum 0xa0::m::E1<0xa0::m::E0, 0xa1::m::E3> {
    V {
        a: address,
        p: enum 0xa0::m::E0 {
            V {
                b: bool,
                v: vector<enum 0xa0::m::E1<0xa0::m::T1<0xa0::m::T2, u128>, u128> {
                    V {
                        a: address,
                        p: struct 0xa0::m::T1<0xa0::m::T2, u128> {
                            a: address,
                            p: struct 0xa0::m::T2 {
                                x: u8,
                            },
                            q: vector<u128>,
                        },
                        q: vector<u128>,
                    },
                }>,
            },
        },
        q: vector<enum 0xa1::m::E3 {
            V0 {
                y: u16,
            },
        }>,
    },
}
